[package]
name = "cosmonaut-space"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", default-features = false }
bnum = { version = "0.9.0", features = ["numtraits", "nightly", "rand"] }
num-integer = { version = "0.1.45", features = ["i128"] }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
