[package]
name = "cosmonaut-space"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmonaut-common = { path = "../common" }
num-integer = { version = "0.1.45", features = ["i128"] }
bevy = { version = "0.11.3", default-features = false }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
